--- a/src/components/form/index.sass
+++ b/src/components/form/index.sass
@@ -5,7 +5,7 @@ $mainClass: '.form'
     width: 340px
     max-width: 100%
     border-radius: 12px
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.14)
+    box-shadow: 0 0 6px 0 $colorPureBlack15
 
     form
         padding: 30px
