--- a/src/pages/errorPage/errorPage.hbs
+++ b/src/pages/errorPage/errorPage.hbs
@@ -1,6 +1,6 @@
 <main class='page-error'>
     <section class='page-error_content'>
-        <div class='page-error_title'>{{errorData.errorCode}}</div>
+        <h1 class='page-error_title'>{{errorData.errorCode}}</h1>
         <p>{{errorData.title}}</p>
         {{> Link label="Назад к чатам"}}
     </section>
