--- a/src/styles/vars.sass
+++ b/src/styles/vars.sass
@@ -1,5 +1,7 @@
 $familyMain: 'Roboto', 'Roboto Flex', Arial, sans-serif
 
+$colorPureBlack: #000
+$colorPureBlack15: rgba(0, 0, 0, 0.15)
 $colorBlack: #1e1e1e
 $colorWhite: #fff
 $colorWhiteDark: #fbfbfb
