--- a/src/pages/profilePage/profilePagePassword.hbs
+++ b/src/pages/profilePage/profilePagePassword.hbs
@@ -1,41 +1,36 @@
 <main class='page-profile'>
     <button class='page-profile_back'></button>
     <section class='page-profile_content'>
-        <div class='page-profile_avatar'>
-            <button type='button'>
-                <img src='{{#if profileData.avatar}}{{ profileData.avatar }}{{else}}/images/avatar_empty.png{{/if}}' alt=''>
-            </button>
-        </div>
-        <div class='page-profile_nick-name'>{{ profileData.display_name }}</div>
-        <div class='page-profile_list'>
-
-
-
-
-
-            <div class='page-profile_list-item'>
-                Старый пароль
-                {{> Input value=profileData.oldPassword type="password" id="oldPassword" name="oldPassword" disabled=profileData.disabled mod="input--clear" }}
+        <form action='' method='get'>
+            <div class='page-profile_avatar'>
+                {{> Avatar }}
             </div>
-            <div class='page-profile_list-item'>
-                Новый пароль
-                {{> Input value=profileData.newPassword type="password" id="newPassword" name="newPassword" disabled=profileData.disabled mod="input--clear" }}
-            </div>
-            <div class='page-profile_list-item'>
-                Повторите новый пароль
-                {{> Input type="password" id="newPasswordRepeat" name="newPasswordRepeat" disabled=profileData.disabled mod="input--clear" }}
-            </div>
-        </div>
-        {{#if profileData.disabled }}
+            <div class='page-profile_nick-name'>{{ profileData.display_name }}</div>
             <div class='page-profile_list'>
-                <div class='page-profile_list-item'>{{> Link label="Изменить данные"}}</div>
-                <div class='page-profile_list-item'>{{> Link label="Изменить пароль"}}</div>
-                <div class='page-profile_list-item'>{{> Link label="Выйти" mod="link--red"}}</div>
+                <div class='page-profile_list-item'>
+                    Старый пароль
+                    {{> Input value=profileData.oldPassword type="password" id="oldPassword" name="oldPassword" disabled=profileData.disabled mod="input--clear" }}
+                </div>
+                <div class='page-profile_list-item'>
+                    Новый пароль
+                    {{> Input value=profileData.newPassword type="password" id="newPassword" name="newPassword" disabled=profileData.disabled mod="input--clear" }}
+                </div>
+                <div class='page-profile_list-item'>
+                    Повторите новый пароль
+                    {{> Input type="password" id="newPasswordRepeat" name="newPasswordRepeat" disabled=profileData.disabled mod="input--clear" }}
+                </div>
             </div>
-        {{else}}
-            <div class='page-profile_btns'>
-                {{> Button label="Сохранить" }}
-            </div>
-        {{/if}}
+            {{#if profileData.disabled }}
+                <div class='page-profile_list'>
+                    <div class='page-profile_list-item'>{{> Link label="Изменить данные"}}</div>
+                    <div class='page-profile_list-item'>{{> Link label="Изменить пароль"}}</div>
+                    <div class='page-profile_list-item'>{{> Link label="Выйти" mod="link--red"}}</div>
+                </div>
+            {{else}}
+                <div class='page-profile_btns'>
+                    {{> Button type="submit" label="Сохранить" }}
+                </div>
+            {{/if}}
+        </form>
     </section>
 </main>
